# DIFAL_Madero

./: .gitignore  DIFAL-Madero.spec  README.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.specify/: feature.json
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
config/: apuracao.yaml  conta_por_grupo.yaml  importacao.yaml  ncm_regras.yaml
frontend/public/: index.html
scripts/: analyze_ncm_rules.py  analyze_refs.py  analyze_refs2.py  build-exe.ps1  compare_difal_counts.py  debug_row.py  diagnose_novo_difal.py  diagnose_sft_enrichment.py  extract_conta_grupo.py  extract_conta_map.py  inspect_col_formulas.py  inspect_z_aa.py  lookup_chave_sft.py  read_formulas.py  read_sheet1.py  start-app.ps1  sync_ncm_regras.py  validate_apuracao.py
specs/001-auto-difal-industria/: spec.md
specs/002-industria-importacao/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-difal-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/difal_api/: job_store.py  main.py  orchestrator.py
src/difal_apuracao/: calculator.py  cli.py  config.py  models.py  ncm_rules.py  reader.py  sb1_lookup.py  writer.py
src/difal_desktop/: __init__.py  __main__.py  app.py  (+2 more)
tests/: test_calculator.py  test_entradas_bi_lookup.py  test_entradas_bi_lookup_file.py  test_importacao_transformer.py  test_ncm_vigencia.py  test_sft_datas.py  test_writer_datas.py
(+18 files in other folders)
