[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "difal-madero"
version = "0.1.0"
description = "Geração automática de planilhas DIFAL Indústria Madero"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.2",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]
desktop = ["pyinstaller>=6.0.0"]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0.0",
]

[project.scripts]
difal-apuracao = "difal_apuracao.cli:app"
difal-importacao = "difal_importacao.cli:app"
difal-desktop = "difal_desktop.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
